crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_parentheses.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    FStringStart 0..2 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 2..3,
    Rbrace 3..4,
    FStringEnd 4..5 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 6..8 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 8..12 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 12..13 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 14..16 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 16..17 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 17..18,
    Rbrace 18..19,
    FStringEnd 19..20 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 21..23 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 23..25 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 25..26,
    Rbrace 26..27,
    FStringMiddle 27..29 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 29..30 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 31..33 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 33..41 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 41..42 (flags = DOUBLE_QUOTES | F_STRING),
    FStringStart 43..45 (flags = DOUBLE_QUOTES | F_STRING),
    FStringMiddle 45..46 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 46..47,
    Rbrace 47..48,
    FStringMiddle 48..56 (flags = DOUBLE_QUOTES | F_STRING),
    Lbrace 56..57,
    Rbrace 57..58,
    FStringMiddle 58..71 (flags = DOUBLE_QUOTES | F_STRING),
    FStringEnd 71..72 (flags = DOUBLE_QUOTES | F_STRING),
    Newline 72..72,
]
```
