crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_single_quote_escape_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(MAC_EOL)
snapshot_kind: text
---
## Tokens
```
[
    FStringStart 0..2 (flags = F_STRING),
    FStringMiddle 2..19 (flags = F_STRING),
    FStringEnd 19..20 (flags = F_STRING),
    Newline 20..20,
]
```
